--- a/user_app/pubspec.yaml
+++ b/user_app/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  google_maps_flutter: ^2.2.1
+  google_maps_flutter_android: ^2.3.3
+  google_maps_flutter_platform_interface: ^2.2.4
 
 dev_dependencies:
   flutter_test:
