--- a/app/user_app_restored/iotapp/pubspec.yaml
+++ b/app/user_app_restored/iotapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_emoji: ^2.4.0
+  mqtt_client: ^9.7.4
 
 dev_dependencies:
   flutter_test:
