--- a/app/user_app_restored/iotapp/pubspec.yaml
+++ b/app/user_app_restored/iotapp/pubspec.yaml
@@ -38,10 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_emoji: ^2.4.0
-<<<<<<< HEAD
   mqtt_client: ^9.7.4
-=======
->>>>>>> billy-code
+  flutter_map: ^3.1.0
+  latlong2: ^0.8.1
 
 dev_dependencies:
   flutter_test:
