--- a/app/user_app_restored/iotapp/android/app/src/main/AndroidManifest.xml
+++ b/app/user_app_restored/iotapp/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.iotapp">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:label="iotapp"
         android:name="${applicationName}"
