--- a/app/user_app_restored/iotapp/pubspec.yaml
+++ b/app/user_app_restored/iotapp/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mqtt_client: ^9.7.4
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  flutter_map_location_marker: ^5.1.0+1
 
 dev_dependencies:
   flutter_test:
