--- a/app/user_app_restored/iotapp/android/app/src/main/AndroidManifest.xml
+++ b/app/user_app_restored/iotapp/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
-        android:label="iotapp"
+        android:label="Smart Office - IoT Project"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
