--- a/app/iotapp/android/app/build.gradle
+++ b/app/iotapp/android/app/build.gradle
@@ -48,8 +48,8 @@ android {
         applicationId "com.example.iotapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 31
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 23
+        //minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
